force-app/main/default/objects/Kit_Assessment__c/Kit_Assessment__c.object-meta.xml
<CustomObject>
    <label>Kit Assessment</label>
    <nameField>
        <displayFormat>k-{0000}</displayFormat>
        <label>Kit Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit Assessment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>