force-app/main/default/objects/Kit_Assessment__c/fields/Assessed_By__c.field-meta.xml
<CustomField>
    <fullName>Assessed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Kit_Assessment1</relationshipName>
    <type>Lookup</type>
</CustomField>