force-app/main/default/objects/Kit_Assessment__c/fields/Assessed_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Date__c</fullName>
    <label>Assessed Date</label>
    <type>DateTime</type>
</CustomField>