force-app/main/default/objects/Kit_Assessment__c/fields/Cancel_Has_Kit__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Has_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Has Kit</label>
    <type>Checkbox</type>
</CustomField>