force-app/main/default/objects/Kit_Assessment__c/fields/Cancel_Needs_Kit__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Needs_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Needs Kit</label>
    <type>Checkbox</type>
</CustomField>