force-app/main/default/objects/Kit_Assessment__c/fields/Has_Kit__c.field-meta.xml
<CustomField>
    <fullName>Has_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Kit</label>
    <type>Checkbox</type>
</CustomField>