force-app/main/default/objects/Kit_Assessment__c/fields/Kit_Name__c.field-meta.xml
<CustomField>
    <fullName>Kit_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Kit Assessment (Kit Name)</relationshipLabel>
    <relationshipName>Kit_Assessment1</relationshipName>
    <type>Lookup</type>
</CustomField>