force-app/main/default/objects/Kit_Assessment__c/fields/KitOrder__c.field-meta.xml
<CustomField>
    <fullName>KitOrder__c</fullName>
    <formula>Value(Text( Product__r.kit_Order__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KitOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>