force-app/main/default/objects/Kit_Assessment__c/fields/Needs_Kit__c.field-meta.xml
<CustomField>
    <fullName>Needs_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Kit</label>
    <type>Checkbox</type>
</CustomField>