force-app/main/default/objects/Kit_Assessment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Kit Assessment</relationshipLabel>
    <relationshipName>Kit_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>