force-app/main/default/objects/Kit_Assessment__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JJVC</fullName>
            </value>
            <value>
                <fullName>Alcon</fullName>
            </value>
            <value>
                <fullName>B&amp;L</fullName>
            </value>
            <value>
                <fullName>Cooper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>