force-app/main/default/objects/Kit_Assessment__c/fields/Vendor_From_Product__c.field-meta.xml
<CustomField>
    <fullName>Vendor_From_Product__c</fullName>
    <formula>Text(Product__r.Vendor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor From Product</label>
    <type>Text</type>
</CustomField>